# proxies-ng

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  uvicorn_logging.yml
app/: error_handlers.py  init_data.py  main.py
app/api/: api.py
app/api/v1/endpoints/: auth.py  country.py  health.py  proxy.py  source.py  user.py
app/api/v1/endpoints/schemas/: country.py  health.py  login.py  proxy.py  source.py  status.py  user.py
app/api/v1/endpoints/utils/: dependencies.py  di_deps.py  token_auth.py
app/core/: config.py  database.py  exceptions.py  geoip.py  security.py  uow.py
app/models/: base.py  country.py  proxy.py  source.py  user.py
app/repository/: base.py  proxy.py  source.py  user.py
app/service/: proxy.py  source.py  user.py
app/static/js/: dashboard.js  dashboard_base.js  index.js  login.js  proxy_table.js  source.js  user.js
app/tasks/: celery.py  check_proxies.py  fetch_proxies.py
app/tasks/utils/: aws_check.py  gather.py  network_request.py
app/templates/: 404.html  api.html  base.html  dashboard.html  dashboard_base.html  index.html  login.html  source.html  user.html
app/views/: pages.py
app/views/utils/: user_deps.py
caddy/: Caddyfile  Caddyfile.dev  Dockerfile
migrations/: env.py
migrations/versions/: 2025_03_12_1639-df3e66a6efbe_initial_revision.py  2025_03_20_2013-2ea4d91a692b_initial.py  2025_04_09_2059-5ba558e0815e_latency.py  2025_04_14_1812-19defea0d12c_countries.py  2025_04_17_1859-95ba570ce574_fix_indexes.py  2025_04_17_2015-c9f129cee453_update_fk.py  2025_04_29_1714-b4e88ad9d69e_user.py  2025_05_02_2216-e4945f64c153_proxy_health_typo.py  2025_05_27_1716-12ca8b8dabf0_fix_health_typos.py
prometheus/: prometheus.yml
tests/integration/: conftest.py  test_proxy_repository.py  test_source_repository.py  test_uow.py  test_user_repository.py
tests/unit/: test_celery.py  test_geoip.py  test_proxy_service.py  test_security.py  test_source_service.py  test_user_service.py
tests/unit/tasks/: test_celery.py  test_check_proxies.py  test_fetch_proxies.py
tests/unit/tasks/utils/: test_aws_check.py  test_gather.py  test_network_request.py
