[project]
name = "proxies-ng"
version = "0.1.0"
description = ""
authors = [
    {name = "sny",email = "127958265+kyofu95@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiohttp[speedups] (>=3.11.14,<4.0.0)",
    "geoip2 (>=5.0.1,<6.0.0)",
    "celery[redis] (>=5.4.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
mypy = "^1.15.0"
ruff = "^0.9.9"
testcontainers = { version = "^4.9.2", python = ">=3.12,<4.0" }

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
markers = [
    "unit: run all unit tests",
    "integration: run all integration tests"
]

asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
python_version = 3.12
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
warn_return_any = true
exclude = [
    "tests/*"
]
plugins = [
    "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ALL",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    #### modules
    "TCH",

    #### specific rules
    "D100", # undocumented-public-module
    "D104", # undocumented-public-package
    "D212", # multi-line-summary-first-line
    "D404", # docstring-starts-with-this
    "D413", # missing-blank-line-after-last-section
    "EM101", # Exception must not use a string literal, assign to variable first
    "PGH003", # Ruff and mypy, Use specific rule codes when ignoring type issues
    "TRY003", # Avoid specifying long messages outside the exception class
    "UP017" # datetime-timezone-utc
]